# merge-segments

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  pyrightconfig.json  readme.md  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml  main.yml  publish_to_pypi.yml
benchmarks/: compare_merges.py
src/dtimsprep/: merge.py
src/merge_segments/: __init__.py  _numba_merge.py  _validation.py  exceptions.py  merge.py
tests/: test_Sum.py  test_Sum_opt.py  test_categorical_fallback_tie.py  test_doc_example.py  test_doc_example_opt.py  test_graceful_missing_mismatched_columns.py  test_graceful_missing_mismatched_columns_opt.py  test_graceful_overlapping_columns.py  test_graceful_overlapping_columns_error.py  test_graceful_overlapping_columns_opt.py  test_keep_longest_value.py  test_keep_longest_value_opt.py  test_length_weighted_percentile_edges.py  test_merge.py  test_merge_on_one_key.py  test_merge_on_one_key_opt.py  test_min_max_argmin_argmax.py  test_min_max_argmin_argmax_opt.py  test_numba_merge.py  test_property_overlap.py  test_proportional_sum.py  test_proportional_sum_opt.py  test_verbose_parameter.py  test_wrong_argument_type.py  test_wrong_argument_type_opt.py  test_zero_length.py  test_zero_length_opt.py  testing.py  testing_opt.py
tests_manual/: generate_test_charts.py  generate_test_charts_opt.py
