[project]
name = "merge_segments"
version = "1.0.0"
authors = [
  {name="Nicholas Archer"},
]
description = "A tool for merging data onto a road network segmentation"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  "pandas>=1.5",
  "deprecated>=1.2",
  "numpy>=1.22",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
progress = [
  "tqdm>=4.66",
]
plotting = [
  "matplotlib>=3.7",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "pyright>=1.1.379",
  "black>=24.8",
  "ruff>=0.6.9",
  "types-Deprecated>=1.2.9",
  "nox>=2024.4",
]

[project.urls]
"Homepage" = "https://github.com/thehappycheese/merge-segments"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/merge_segments"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v --tb=short --capture=no"
# -ra           : (r)show extra test summary (a)ll except passed (A)ll including passed
# -q            : quiet
# --tb=short    : shorter error messages
# --capture=no  : disable pytest comment capture behaviour
testpaths = [
  "tests"
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["merge_segments"]
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["deprecated", "deprecated.*"]
ignore_missing_imports = true