[project]
name = "merge_segments"
version = "1.0.0"
authors = [
  {name="Nicholas Archer"},
]
maintainers = [
  {name="Dagmawi Tadesse"},
]
description = "A tool for merging data onto a road network segmentation"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
  "pandas>=1.5",
  "deprecated>=1.2",
  "numpy>=1.22",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
progress = [
  "tqdm>=4.66",
]
plotting = [
  "matplotlib>=3.7",
]
dev = [
  "pytest>=8.4",
  "pytest-cov>=5.0",
  "mypy>=1.18",
  "black>=25.9",
  "ruff>=0.14",
  "nox>=2024.4",
  "pre-commit>=4.3",
]

[project.urls]
"Homepage" = "https://github.com/Main-Roads/merge-segments"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/merge_segments"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v --tb=short --capture=no"
# -ra           : (r)show extra test summary (a)ll except passed (A)ll including passed
# -q            : quiet
# --tb=short    : shorter error messages
# --capture=no  : disable pytest comment capture behaviour
testpaths = [
  "tests"
]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
packages = ["merge_segments"]
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["deprecated", "deprecated.*"]
ignore_missing_imports = true