[metadata]
name = dtimsprep
version = 0.4.4
author = Nicholas Archer
url = https://github.com/thehappycheese/dtimsprep.git
long_description = file: readme.md
long_description_content_type = text/markdown


[options]
package_dir =
    =src
packages =
	dtimsprep
install_requires =
    pandas
    deprecated
python_requires=>=3.9

[options.extras_require]
dev=
    pytest