[metadata]
name = merge_segments
version = 0.5.0
author = Nicholas Archer
url = https://github.com/thehappycheese/merge-segments.git
long_description = file: readme.md
long_description_content_type = text/markdown


[options]
package_dir =
    =src
packages =
	merge_segments
install_requires =
    pandas
    deprecated
python_requires=>=3.9

[options.extras_require]
dev=
    pytest
